--- a/Latihan/latihan.html
+++ b/Latihan/latihan.html
@@ -1,1 +1,120 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Latihan</title>
+    <link rel="stylesheet" href="style.css" />
 
+    <style>
+      h1 {
+        background-color: rgb(255, 168, 86);
+      }
+    </style>
+  </head>
+  <body>
+    <nav>
+      <div class="dropdown">
+        <a href="">Menu</a>
+        <div class="dropdown-content">
+          <ul>
+            <li><a href="">Submenu1</a></li>
+            <li><a href="">Submenu2</a></li>
+            <li><a href="">Submenu3</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <h1>Apa itu 'Hoax'?</h1>
+    <p id="blue-center">
+      Hoax adalah informasi palsu atau tipuan yang disebarkan dengan tujuan
+      untuk menipu, mengelabui, atau memperdaya orang lain. Hoax sering kali
+      disebarkan melalui media sosial, pesan berantai, situs web palsu, atau
+      email yang menampilkan informasi yang tidak akurat, tidak dapat dipercaya,
+      atau tidak berdasar fakta.<br />
+      Hoax mencakup berbagai topik, seperti berita palsu, teori konspirasi,
+      klaim medis yang tidak terbukti, foto atau video yang diubah, serta
+      penipuan atau skema penipuan lainnya. Tujuan utama dari hoax adalah
+      mempengaruhi opini publik, memicu kepanikan, mencemarkan reputasi
+      seseorang, atau bahkan mendapatkan keuntungan finansial.<br />
+      Penting untuk berhati-hati dan skeptis terhadap informasi yang diterima,
+      terutama di era digital di mana penyebaran hoax dapat terjadi dengan cepat
+      dan luas. Memverifikasi sumber informasi, memeriksa fakta melalui sumber
+      yang terpercaya, dan menggunakan akal sehat adalah langkah-langkah penting
+      untuk menghindari jatuh ke dalam perangkap hoax.
+    </p>
+
+    <h2 class="blue-center">Contoh Selector</h2>
+    <h2 class="blue-center fancy">Contoh gabungan ID</h2>
+    <img class="center" src="tes.png" alt="tes" />
+    <div class="box-content">
+      <h2>Leo Messi</h2>
+      <img
+        class="circle-image"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Lionel_Messi_20180626.jpg/640px-Lionel_Messi_20180626.jpg"
+        alt="Leo Messi"
+      />
+      <p>
+        Lionel Andrés Messi, also known as Leo Messi, is an Argentine
+        professional footballer who plays as a forward for Ligue 1 club Paris
+        Saint-Germain and captains the Argentina national team. Widely regarded
+        as one of the greatest players of all time, Messi has won a record seven
+        Ballon d'Or awards and a record six European Golden Shoes, and in 2020
+        he was named to the Ballon d'Or Dream Team. Until leaving the club in
+        2021, he had spent his entire professional career with Barcelona, where
+        he won a club-record 34 trophies, including ten La Liga titles, seven
+        Copa del Rey titles and the UEFA Champions League four times. With his
+        country, he won the 2021 Copa América and the 2022 FIFA World Cup. A
+        prolific goalscorer and creative playmaker, Messi holds the records for
+        most goals in La Liga (474), most hat-tricks in La Liga (36) and the
+        UEFA Champions League (eight), and most assists in La Liga (192) and the
+        Copa América (17). He also has the most international goals by a South
+        American male (103). Messi has scored over 800 senior career goals for
+        club and country, and has the most goals by a player for a single club
+        (672).
+      </p>
+      <h2>Photos</h2>
+      <div class="photos">
+        <img
+          src="https://i.pinimg.com/originals/dd/0f/33/dd0f33e6834dd2cb279c6b711cd8e218.jpg"
+          alt="LM1"
+        />
+        <img
+          src="https://hips.hearstapps.com/hmg-prod/images/lionel-messi-of-argentina-lifts-the-fifa-world-cup-trophy-news-photo-1671458742.jpg"
+          alt="LM2"
+        />
+        <img src="https://pbs.twimg.com/media/C-Q6MTiXYAA1cRm.jpg" alt="LM3" />
+      </div>
+    </div>
+
+    <p>Tag Bold termasuk <b> Inline </b> Tag</p>
+    <a href="https://www.youtube.com/"> Buka Youtube </a> <br />
+    <a href="https://www.youtube.com/" target="_blank">
+      Buka Youtube dengan target
+    </a>
+    <br />
+    <a href="https://www.youtube.com/" title="ini title youtube">
+      Buka Youtube dengan title
+    </a>
+    <br />
+    <a href="mailto:arjism23@gmail.com" title="ini title youtube">
+      link direct ke email
+    </a>
+    <br />
+
+    <a href="https://www.youtube.com" title="ini title youtube">
+      contoh absolute link tidak spesifik
+    </a>
+    <br />
+    <a
+      href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+      title="ini title youtube"
+    >
+      contoh relative link spesifik
+    </a>
+    <br />
+
+    <button>Default Button</button>s
+  </body>
+</html>
